<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_signs_of_cancer"
            android:icon="@drawable/ic_cancer_signs"
            android:title="@string/cancer_signs" />
        <item
            android:id="@+id/nav_types_of_cancer"
            android:icon="@drawable/ic_cancer_types"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_stages_of_cancer"
            android:icon="@drawable/ic_cancer_stages"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_causes_of_cancer"
                android:icon="@drawable/ic_cancer_causes"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_cancer_centers"
                android:icon="@drawable/ic_cancer_center"
                android:title="@string/menu_send" />
            <group>
                <item
                    android:id="@+id/nav_donate"
                    android:icon="@drawable/ic_donate"
                    android:title="@string/donate" />
            </group>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_forum"
                android:title="@string/forum"
                />
        </menu>
    </item>

</menu>
